--- a/main.css
+++ b/main.css
@@ -27,11 +27,22 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 
+@font-face {
+  font-family: 'Kumbh_Sans';
+  src: url('./fonts/Kumbh_Sans/KumbhSans-SemiBold.ttf');
+
+  font-family: 'Epilogue';
+  src: url('./fonts/Epilogue/Epilogue-Regular.ttf');
+}
+
 /* Custom properties */
 :root {
-  --clr-main-bg: #E9DCC9;
-  --clr-main-dark: #84a98c;
-  --clr-main-light: #FFFDD0;
+  --clr-main-dark: #8fbdb7;
+  --clr-main-light: #F9EDD6;
+  --clr-white: #FFFFF0;
+
+  --ff-title: 'Kumbh_Sans', sans-serif;
+  --ff-body: 'Epilogue', sans-serif;
 
   --spacer-xl: 5rem;
   --spacer-l: 4rem;
@@ -54,7 +65,7 @@ p, h1, h2, h3, h4, h5, h6 {
 /* Main */
 
 body {
-  background-color: var(--clr-main-bg);
+  background-color: var(--clr-main-light);
 }
 
 .container {
@@ -63,47 +74,70 @@ body {
   margin: 0 auto;
 }
 
-.main-title {
-  margin-top: var(--spacer-m);
+.header {
+  border-bottom: 5px solid black;
+  padding-block: var(--spacer-xs);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--clr-main-dark);
+
+  font-family: var(--ff-title);
+  font-size: 1.3rem;
 }
+
 
 .main-box {
   margin: var(--spacer-l) auto;
-  max-width: 800px;
+  background-color: var(--clr-white);
+  max-width: 40rem;
+  border: 8px solid black;
+
+  font-family: var(--ff-body);
+  font-size: 1.1em;
 }
 
 .main-box__text {
-  background-color: var(--clr-main-dark);
   padding: var(--spacer-m) var(--spacer-s);
-  border-radius: 10px 10px 0 0;
+  margin-top: var(--spacer-s);
+}
 
-  -webkit-box-shadow: 0px 5px 10px 2px rgba(27, 52, 71, 0.2);
-  -moz-box-shadow: 0px 5px 10px 2px rgba(27, 52, 71, 0.2);
-  box-shadow: 0px 5px 10px 2px rgba(27, 52, 71, 0.2);
-
-  
+.main-box__text > p:first-child {
+  margin-bottom: var(--spacer-xs);
 }
 
 .main-box__options {
-  background-color: #fff;
   padding: var(--spacer-m) var(--spacer-s);
-  border-radius: 0 0 10px 10px;
-  text-align: center;
-
-  -webkit-box-shadow: 0px 5px 10px 2px rgba(27, 52, 71, 0.2);
-  -moz-box-shadow: 0px 5px 10px 2px rgba(27, 52, 71, 0.2);
-  box-shadow: 0px 5px 10px 2px rgba(27, 52, 71, 0.2);
 }
 
 .option {
   background-color: var(--clr-main-light);
-  width: 70%;
+  border: 2px solid black;
+  width: 95%;
   margin: 0 auto;
-  padding-block: var(--spacer-xxs);
-  border-radius: 10px;
+  padding: var(--spacer-xxs);
   cursor: pointer;
+  transition: all ease .3s;
+}
+
+.option:hover {
+  background-color: var(--clr-main-dark);
+}
+
+.option:active {
+  background-color: #729792;
 }
 
 .option:not(:first-child) {
   margin-top: var(--spacer-xs);
+}
+
+.copyright {
+  font-family: var(--ff-body);
+  padding-bottom: var(--spacer-xs);
+}
+
+.footer__link {
+  text-decoration: none;
+  color: var(--clr-main-dark);
 }
