Now the actual index of the current block is saved to local storage, not arbitrary block id. Plus renamed a few vars and improved comments

--- a/main.css
+++ b/main.css
@@ -144,6 +144,10 @@ body {
   color: var(--clr-main-dark);
 }
 
+.footer__link:hover {
+  color: var(--clr-main-dark--hover);
+} 
+
 
 /* Buttons */
 
