--- a/main.css
+++ b/main.css
@@ -159,6 +159,53 @@ body {
 } 
 
 
+
+/* Modal */
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
+  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--clr-white);
+  padding: var(--spacer-m) var(--spacer-s);
+  width: clamp(20rem, 35rem, 85%);
+
+  border: 8px solid black;
+
+  font-family: var(--ff-body);
+  font-size: 1.1em;
+  text-align: center;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: var(--spacer-s);
+  gap: 20px;
+}
+
+.show-modal {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1.0);
+  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+} 
+
+
 /* Buttons */
 
 .btn {
