--- a/main.css
+++ b/main.css
@@ -1,31 +1,84 @@
-/* Reset */
+/* 
+================
+Reset
+================
+ */
 
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-* {
-  margin: 0;
-}
-html, body {
-  height: 100%;
-}
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
-}
-input, button, textarea, select {
-  font: inherit;
-}
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
-}
-#root, #__next {
-  isolation: isolate;
-}
+ *,
+ *::before,
+ *::after {
+   box-sizing: border-box;
+ }
+ 
+ body,
+ h1,
+ h2,
+ h3,
+ h4,
+ p,
+ figure,
+ blockquote,
+ dl,
+ dd {
+   margin: 0;
+ }
+ 
+ ul[role='list'],
+ ol[role='list'] {
+   list-style: none;
+ }
+ 
+ html:focus-within {
+   scroll-behavior: smooth;
+ }
+ 
+ body {
+   min-height: 100vh;
+   text-rendering: optimizeSpeed;
+   line-height: 1.5;
+   word-wrap: break-word;
+ }
+ 
+ a:not([class]) {
+   text-decoration-skip-ink: auto;
+ }
+ 
+ img,
+ picture {
+   max-width: 100%;
+   display: block;
+ }
+ 
+ input,
+ button,
+ textarea,
+ select {
+   font: inherit;
+ }
+
+ 
+ @media (prefers-reduced-motion: reduce) {
+   html:focus-within {
+    scroll-behavior: auto;
+   }
+   
+   *,
+   *::before,
+   *::after {
+     animation-duration: 0.01ms !important;
+     animation-iteration-count: 1 !important;
+     transition-duration: 0.01ms !important;
+     scroll-behavior: auto !important;
+   }
+ }
+
+
+
+/* 
+================
+Fonts
+===================
+ */
 
 @font-face {
   font-family: 'Epilogue';
@@ -37,7 +90,14 @@ p, h1, h2, h3, h4, h5, h6 {
   src: url('./fonts/Kumbh_Sans/KumbhSans-SemiBold.ttf');
 }
 
-/* Custom properties */
+
+
+/* 
+====================
+Custom properties
+==================== 
+*/
+
 :root {
   --clr-main-dark: #8fbdb7;
   --clr-main-light: #F9EDD6;
@@ -48,6 +108,13 @@ p, h1, h2, h3, h4, h5, h6 {
   --ff-title: 'Kumbh_Sans', sans-serif;
   --ff-body: 'Epilogue', sans-serif;
 
+  --fs-xl: 5em;
+  --fs-l: 3.5em;
+  --fs-m: 2em;
+  --fs-s: 1.7em;
+  --fs-xs: 1.2em;
+  --fs-xxs: 1em;
+
   --spacer-xxl: 7.5rem;
   --spacer-xl: 5rem;
   --spacer-l: 4rem;
@@ -57,18 +124,32 @@ p, h1, h2, h3, h4, h5, h6 {
   --spacer-xxs: .5rem;
 }
 
-/* Utility classes */
 
-.text-center {
-  text-align: center;
-}
+
+/* 
+====================
+Utility classes
+====================
+ */
 
 .d-flex {
   display: flex;
 }
 
-/* Main */
+.container {
+  max-width: 1024px;
+  width: 95%;
+  margin: 0 auto;
+}
 
+
+
+/* 
+====================
+Main
+====================
+ */
+ 
 body {
   background-color: var(--clr-main-light);
   display: flex;
@@ -77,12 +158,6 @@ body {
 
 .main {
   flex: 1 0 auto;
-}
-
-.container {
-  max-width: 1024px;
-  width: 95%;
-  margin: 0 auto;
 }
 
 .header {
@@ -95,7 +170,7 @@ body {
   align-items: center;
 
   font-family: var(--ff-title);
-  font-size: 1.3rem;
+  font-size: var(--fs-s);
 }
 
 .main-box {
@@ -106,34 +181,15 @@ body {
   border: 8px solid black;
 
   font-family: var(--ff-body);
-  font-size: 1.1em;
+  font-size: var(--fs-xs);
 }
 
-.animate-box {
-  animation: box-animation .3s ease-in-out;
-}
-
-@keyframes box-animation {
-  
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: .5;
-    transform: scale(1.1);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-.main-box__text {
+.main-box-text {
   padding: var(--spacer-m) var(--spacer-s) 0 var(--spacer-s);
   margin-top: var(--spacer-s);
 }
 
-.main-box__options {
+.main-box-options {
   display: none;
   padding: var(--spacer-m) var(--spacer-s);
 }
@@ -163,27 +219,37 @@ body {
 
 
 
-/* Footer */
+/* 
+==============
+Footer
+==============
+ */
 
 .footer {
   flex-shrink: 0;
   padding-bottom: var(--spacer-xs);
   margin-top: var(--spacer-m);
+
   font-family: var(--ff-body);
+  text-align: center;
 }
 
-.footer__link {
+.footer-link {
   text-decoration: none;
   color: var(--clr-main-dark);
 }
 
-.footer__link:hover {
+.footer-link:hover {
   color: var(--clr-main-dark--hover);
 } 
 
 
 
-/* Modal */
+/* 
+==============
+Modal
+==============
+ */
 
 .modal {
   position: fixed;
@@ -191,6 +257,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
+
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   visibility: hidden;
@@ -204,21 +271,21 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--clr-white);
-  padding: var(--spacer-m) var(--spacer-s);
+  padding: var(--spacer-l) var(--spacer-s);
   width: clamp(20rem, 35rem, 85%);
 
   border: 8px solid black;
 
   font-family: var(--ff-body);
-  font-size: 1.1em;
+  font-size: var(--fs-xs);
   text-align: center;
 }
 
 .modal-buttons {
   display: flex;
   justify-content: center;
-  margin-top: var(--spacer-s);
   gap: 20px;
+  margin-top: var(--spacer-m);
 }
 
 .show-modal {
@@ -229,21 +296,85 @@ body {
 } 
 
 
-/* Buttons */
+/* 
+=============
+Buttons
+=============
+ */
 
 .btn {
   display: block;
-  cursor: pointer;
-  border: 3px solid black;
   min-width: 9.375rem;
+  border: 3px solid black;
   background-color: var(--clr-main-dark);
   padding: var(--spacer-xxs) var(--spacer-xs);
+
   font-family: var(--ff-title);
-  font-size: 1.3rem;
+  font-size: var(--fs-xs);
+
   transition: .3s ease;
+  cursor: pointer;
 }
 
 .btn:hover,
 .btn:active {
   background-color: var(--clr-main-dark--hover);
 }
+
+
+
+/* 
+=================
+Animations
+====================
+ */
+
+ .animate-box {
+  animation: box-animation .3s ease-in-out;
+}
+
+@keyframes box-animation {
+  
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: .5;
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+
+
+/* 
+================
+Mobile
+===================
+ */
+
+ @media only screen and (max-width: 768px) {
+  .main-title {
+    text-align: center;
+    font-size: var(--fs-s);
+  }
+ }
+
+ @media only screen and (max-width: 418px) {
+  .btn-modal-close,
+  .btn-modal-ok,
+  .btn-play,
+  .btn-start-over {
+    font-size: var(--fs-xxs);
+    min-width: 5rem;
+  }
+ }
+
+ @media only screen and (max-width: 370px) {
+  .btn-wrapper {
+    flex-direction: column;
+  }
+ }
