--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -1,9 +1,9 @@
-// @font-face {
-//   font-family: 'Inter';
-//   src: url('../assets/fonts/Inter-VariableFont_slnt_wght.ttf');
-// }
+@font-face {
+  font-family: 'Epilogue';
+  src: url('../assets/fonts/Epilogue/Epilogue-Regular.ttf');
+}
 
-// @font-face {
-//   font-family: 'Nunito';
-//   src: url('../assets/fonts/Nunito-VariableFont_wght.ttf');
-// }
+@font-face {
+  font-family: 'Kumbh_Sans';
+  src: url('../assets/fonts/Kumbh_Sans/KumbhSans-SemiBold.ttf');
+}
